@@ -5,7 +5,9 @@ Changelog
 3.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add a default "reset table configuration" folder_contents action (which is only
+  visible on tabbedview tabs).
+  [jone]
 
 
 3.1.1 (2012-02-28)
